cluster/external/pve/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve
spec:
  type: ExternalName
  externalName: pve.${SECRET_PRIVATE_DOMAIN}.
  ports:
    - port: 8006
